--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "uuid.v4": "^1.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
